# NoXGeometry

./: .gitignore  0  CMakeLists.txt  NXG  NXG.c  NXG.cpp  NXG_Geom_metod.h  README.md  StdNXG.h  a.out  bild.sh  config.hpp  main.cpp  memu.cpp  mm.cpp  oldmain.txt
SorseMetdLib/: SimpleGeom.cpp
include/: NXG_SimpleGeomety.hpp  NoXG.hpp  NoXGMenu.hpp  NoXG_2D_simple.hpp  NoXG_2D_simple_X.hpp  StdNXG.hpp
sorce/: StdNXG.hpp  main.cpp  memu.cpp
sorce/MetdLibs/: NXG_SimpleGeomety.hpp  SimpleGeom.cpp
src/: constructor.cpp  main.cpp  memu2.cpp  menu.cpp
src/MetdLibs/: SimpleGeom.cpp
src_lib/: NoXG.cpp  NoXGMenu.cpp  NoXG_2D_simple.cpp  SimpleGeom.cpp  StdNXG.cpp
